--- a/index.html
+++ b/index.html
@@ -1,11 +1,15 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-  <head>
-    <title>RedTetris</title>
-    <link rel="icon" href="http://redpelicans.com/favicon.ico">                                                                                                                                          
-  </head>
-  <body>
-    <div id="tetris"></div>
-    <script src="bundle.js"></script>
-  </body>
+	<head>
+		<title>RedTetris</title>
+		<link rel="icon" href="http://redpelicans.com/favicon.ico" />
+		<link
+			rel="stylesheet"
+			href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+		/>
+	</head>
+	<body>
+		<div id="tetris"></div>
+		<script src="bundle.js"></script>
+	</body>
 </html>
